--- a/Indies/Indies.csproj
+++ b/Indies/Indies.csproj
@@ -20,4 +20,11 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Components\Views\UsuarioModal\Default.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Shared\Components\Views\UsuarioModal\Default.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Home\Components\UsuarioModal\Default.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Shared\Components\UsuarioModal\Default.cshtml" />
+    </ItemGroup>
+
 </Project>
